@@ -1,1 +1,1 @@
-3.0.0.beta-1.1.2
+3.0.0.beta-1.1.3
